--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -6,6 +6,8 @@
     height: 99px;
     color: white;
     font-family: "Nimbus Sans D OT", sans-serif;
+    position: sticky;
+    top: 0;
 }
 
 .head h1 {
