--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -2,7 +2,5 @@
     width: 350px;
     background: white;
     height: 100%;
-    position: sticky;
-    top: 0;
-    height: 1085px;
+    position: fixed;
 }
