--- a/src/containers/Jokes/jokes.css
+++ b/src/containers/Jokes/jokes.css
@@ -2,12 +2,14 @@
     margin-top: -55px;
     width: 100%;
     height: 100%;
+
 }
 
 .jokes-area {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 1px 175px;
+    margin-left: 400px;
+    margin-right: 50.5px;
     margin-top: 110px;
 }
