--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -2,5 +2,7 @@
     width: 350px;
     background: white;
     height: 100%;
-    position: fixed;
-}
+    position: sticky;
+    top: 0;
+    height: 1085px;
+ }
