--- a/src/components/Joke/joke.css
+++ b/src/components/Joke/joke.css
@@ -5,12 +5,31 @@
     text-align: center;
     background: white;
     border: solid 1px gray;
-    width: 222px;
-    height: 243px;
+    width: 350px;
     margin-bottom: 29px;
 }
 
 .joke {
     font-family: "Nimbus Sans D OT", sans-serif;
     color: black;
+    margin: 15px;
+}
+
+.search-input {
+  position: relative;
+  top: 75px;
+  left: 30px;
+}
+
+input {
+  width: 85%;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+
+.button {
+  padding: 12px 20px;
+  margin: 8px 30px 0 0;
+  background-color: rgb(0, 0, 0);
+  color: ghostwhite;
 }
