--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,42 +1,32 @@
 .button-area {
-    display: flex;
-    align-items: center;
-    margin: 25px 15px;
+  display: flex;
+  align-items: center;
+  margin: 50px 36px;
 }
 
 .get-jokes-button {
-    padding: 19px 15px;
-    background: #DB374D;
-    color: white;
-    font-family: "Nimbus D OT", sans-serif;
-    font-size: 15px;
-    cursor: pointer;
-    width: 240px;
-}
-
-.category-button {
-  padding: 10px 30px;
-  background: #DB374D;
+  padding: 20px 49px;
+  background: #db374d;
   color: white;
   font-family: "Nimbus D OT", sans-serif;
   font-size: 15px;
   cursor: pointer;
-  width: 120px;
+  width: 240px;
 }
 
 .button-area p:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .adjustment-buttons {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .adjustment-button {
-    text-decoration: none;
-    color: white;
-    background: #DB374D;
-    height: 29.5px;
-    cursor: pointer;
+  text-decoration: none;
+  color: white;
+  background: #db374d;
+  height: 29.5px;
+  cursor: pointer;
 }
