--- a/src/containers/Categories/categories.css
+++ b/src/containers/Categories/categories.css
@@ -1,4 +1,7 @@
 .categories {
-    margin-left: 15px;
-    margin-top: 30px;
+    margin-top: 55px;
+    width:git  100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
