--- a/src/containers/Categories/categories.css
+++ b/src/containers/Categories/categories.css
@@ -1,6 +1,6 @@
 .categories {
     margin-top: 55px;
-    width:git  100%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
