--- a/src/containers/Jokes/jokes.css
+++ b/src/containers/Jokes/jokes.css
@@ -1,14 +1,13 @@
 .jokes-background {
-    margin-top: -55px;
-    width: 100%;
-    height: 100%;
-
+  margin-top: -55px;
+  margin-left: 400px;
+  margin-right: 50px;
 }
 
 .jokes-area {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 1px 175px;
-    margin-top: 110px;
- }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 110px;
+}
