--- a/src/containers/Categories/categories.css
+++ b/src/containers/Categories/categories.css
@@ -3,6 +3,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-direction: row;
 }
