--- a/chuck_jokes/src/index.css
+++ b/chuck_jokes/src/index.css
@@ -1,5 +1,52 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *::after, *::before {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.box {
+  border: 1px solid gray;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.column, .columnCategory, .columnJoke {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  position : relative;
+  padding-right: 15px;
+  padding-left : 15px;
+}
+
+.column {
+  flex-grow: 1;
+}
+
+.columnCategory {
+  flex-basis: 20%;
+}
+
+.columnJoke {
+  flex-basis: 80%;
 }
