--- a/chuck_jokes/src/index.css
+++ b/chuck_jokes/src/index.css
@@ -18,6 +18,7 @@ body {
 
 .container {
   width: 100%;
+  max-width : 1350px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
