--- a/chuck_jokes/src/components/jokes/categories/categories.css
+++ b/chuck_jokes/src/components/jokes/categories/categories.css
@@ -1,7 +1,7 @@
 .random-joke-button {
     margin-top : 1rem;
     background: none;
-    border : 2px solid red;
+    border : 2px solid #ff3030;
     border-radius: 3px;
     height: 2rem;
     font-size: 1rem;
@@ -9,7 +9,7 @@
 
 .random-joke-button:hover {
     cursor: pointer;
-    background-color: red;
+    background-color: #ff3030;
     color : white;
 }
 
