--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -4,10 +4,26 @@ body {
   font-family: sans-serif;
 }
 
-.container, .search-bar {
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  width: 100%;
+  background-color: #ff3030;
+  padding: 1rem;
+}
+
+.content{
+  display: flex;
   width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+.jokes-container, .categories-container {
+  padding: 1rem;
 }
 
 .search-bar {
@@ -16,7 +32,6 @@ body {
 }
 
 .search-bar input{
-  margin-top: 2rem;
   height: 1.4rem;
   width: 50%;
 }
