Display number of jokes implementation

--- a/server/client/src/components/header/header.css
+++ b/server/client/src/components/header/header.css
@@ -13,33 +13,31 @@
 }
 
 .search-bar {
-  width: 80%;
+  width: 60%;
+}
+.display-number-bar {
+  width : 20%;
 }
 
-.search-bar {
-  width: 80%;
+.search-bar, .display-number-bar{
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.search-bar input {
-  height: 1.4rem;
-  width: 50%;
 }
 
 input:focus {
   outline: none;
 }
 
-.search-bar input{
+.search-bar input, .display-number-bar input {
   height: 2.5rem;
   padding: 0 1rem;
   font-size: 1rem;
+  width: 50%;
   border: 1px solid #dbdbdb;
 }
 
-.search-bar input:focus{
+.search-bar input:focus, .display-number-bar input:focus{
   box-shadow: 0 0 1px 1px #8cbfff;
   border: 1px solid #8cbfff;
 }
