--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -1,3 +1,6 @@
+* { 
+  
+}
 body {
   margin: 0;
   padding: 0;
@@ -28,7 +31,8 @@ body {
   flex-wrap: wrap; 
 }
 
-.jokes-container, .categories-container {
+.jokes-container, 
+.categories-container {
   box-sizing: border-box;
 }
 
