--- a/jokes-app/src/index.css
+++ b/jokes-app/src/index.css
@@ -1,12 +1,23 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Raleway", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+hr {
+  margin: 0 !important;
+}
+
+h2 {
+  padding-bottom: 0.5rem;
 }
 
 .category-container {
@@ -30,25 +41,148 @@ code {
 .category-container ul li:hover {
   text-transform: capitalize;
   cursor: pointer;
-  color: orange;
+  color: #dc143c;
 }
 
 .category-container ul li.selected {
   color: red;
+  font-weight: 800;
 }
 
-.jokes-list{
+ul.jokes-list {
   list-style-type: none;
+  padding: 0;
 }
 
-.jokes-list li:nth-child(odd) {
+/*ul.jokes-list li:nth-child(odd) {
   background-color: #eeeeee;
+}*/
+
+ul.jokes-list li {
+  background-color: #fbfbfb;
+  overflow: auto;
+  padding: 1rem 1rem;
+  margin: 1rem auto;
+  width: 70vw;
+  border-radius: 0.3rem;
+  -webkit-box-shadow: 0px 4px 9px 5px rgb(228, 228, 228);
+  -moz-box-shadow: 0px 4px 9px 5px rgb(228, 228, 228);
+  box-shadow: 0px 4px 9px 5px rgb(228, 228, 228);
 }
 
-.info{
+.info {
   color: gray;
   font-size: 0.7em;
 }
-.countInput {
-  margin: 0 0.7em
+
+.count-input {
+  margin: 0 0.7em;
+}
+
+.count-setter-component {
+  margin: 1rem 0rem 2rem 0rem;
+}
+
+.special-joke {
+  font-family: "Staatliches", sans-serif;
+  font-size: calc(3vh + 3vw);
+  padding: 12vh 3vw 1vh 3vw;
+  overflow: auto;
+}
+
+.special-joke-block {
+  background-color: crimson;
+  color: white;
+  box-shadow: 0px 2px 3px 0px rgb(195, 195, 195);
+  -webkit-box-shadow: 0px 2px 3px 0px rgb(195, 195, 195);
+  -moz-box-shadow: 0px 2px 3px 0px rgb(195, 195, 195);
+}
+
+.category-block {
+  padding: 1.5rem 1rem 3rem 1rem;
+}
+
+.btn-another-joke {
+  background-color: crimson;
+  color: white;
+  font-weight: 300;
+  font-size: calc(3vh + 3vw);
+  padding: 7px;
+  margin-bottom: 9vh;
+  line-height: 85%;
+  border-radius: 10px;
+  border: 1px solid white;
+  border-bottom: 4px solid white;
+  border-right: 3px solid white;
+}
+
+.btn-another-joke:focus {
+  outline: 0;
+}
+
+.btn-another-joke:active {
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
+  padding-bottom: 7px;
+  margin-top: 3px;
+  margin-left: 2px;
+}
+
+.joke-search {
+  margin: 0 auto;
+  width: 65vw;
+  margin-bottom: 1em;
+  box-shadow: 0px 6px 15px 0px rgb(228, 228, 228);
+  -webkit-box-shadow: 0px 6px 15px 0px rgb(228, 228, 228);
+  -moz-box-shadow: 0px 6px 15px 0px rgb(228, 228, 228);
+}
+
+.search-icon-box {
+  padding: 0.375rem 0.5rem 0.375rem 0.7rem;
+  background-color: crimson;
+}
+
+.search-icon {
+  -webkit-transform: rotate(170deg);
+  -moz-transform: rotate(170deg);
+  -o-transform: rotate(170deg);
+  transform: rotate(170deg);
+  font-size: x-large;
+  line-height: 0;
+  color: white;
+  font-weight: 800;
+}
+
+.search-block {
+  min-height: 80vh;
+  padding: 1.5rem 1rem 3rem 0;
+  background-color: #f9f9f9;
+}
+
+.search-input {
+  border: 2px solid white;
+}
+
+.categories-select {
+  display: none;
+  margin: 1.2rem auto 0 auto;
+  width: 70vw;
+  background-color: white;
+  border: 1px solid #8080808c;
+  border-radius: 1px;
+  height: 2.5rem;
+  text-transform: capitalize;
+}
+
+footer {
+  line-height: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .category-container {
+    display: none;
+  }
+  .categories-select {
+    display: block;
+  }
 }
