feat(category-list):styling improvements

--- a/jokes-app/src/index.css
+++ b/jokes-app/src/index.css
@@ -26,7 +26,8 @@ h2 {
   -moz-column-count: 4;
   /* Firefox */
   column-count: 4;
-  margin: 0 10em;
+  margin: 2rem auto 3rem auto;
+  max-width: 850px;
 }
 
 .category-container ul {
@@ -53,10 +54,6 @@ ul.jokes-list {
   list-style-type: none;
   padding: 0;
 }
-
-/*ul.jokes-list li:nth-child(odd) {
-  background-color: #eeeeee;
-}*/
 
 ul.jokes-list li {
   background-color: #fbfbfb;
@@ -87,6 +84,8 @@ ul.jokes-list li {
   font-family: "Staatliches", sans-serif;
   font-size: calc(3vh + 3vw);
   padding: 12vh 3vw 1vh 3vw;
+  max-width: 2000px;
+  margin: 0 auto;
   word-wrap: break-word;
 }
 
