--- a/cnjokes/src/App.css
+++ b/cnjokes/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 19rem;
+  height: 15rem;
+  margin: 10px 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.12);
+  border-radius: 20px;
+  padding: 5px 10px;
+}
+
+.card:hover {
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.12);
+}
+
+.text {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+}
